--- a/scripts/Accessory_figs_20160218.Rmd
+++ b/scripts/Accessory_figs_20160218.Rmd
@@ -96,11 +96,27 @@ results
 
 #Table 1 showing accessory cost values for the species
 ```{r}
-acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,accessory_per_seed,prop_accessory_nonzero,seed_costs,prop_success, prepollen_costs,pack_disp_costs,failure_per_seed,prop_failure,prepollen_failure_per_seed,postpollen_aborted_per_seed, seedset)
+acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,embryo_endo_size,accessory_per_seed,prop_accessory_nonzero,seed_costs,prop_success, prepollen_costs,pack_disp_costs,failure_per_seed,prop_failure,prepollen_failure_per_seed,postpollen_aborted_per_seed, seedset)
 acc_costs_spp$species <- labels.spp.full()
-acc_costs_spp <- format(acc_costs_spp, digit=2)
+acc_costs_spp_format <- acc_costs_spp
+acc_costs_spp_format$seed_size <- round(acc_costs_spp_format$seed_size,digits=3)
+acc_costs_spp_format$embryo_endo_size <- round(acc_costs_spp_format$embryo_endo_size,digits=3)
+acc_costs_spp_format$accessory_per_seed <- paste(round(acc_costs_spp_format$accessory_per_seed,digits=1)," (",
+                                                 round(acc_costs_spp_format$prop_accessory_nonzero,digits=2),")")
+acc_costs_spp_format$seed_costs <- paste(round(acc_costs_spp_format$seed_costs,digits=2)," (",
+                                                 round(acc_costs_spp_format$prop_success,digits=2),")")
+acc_costs_spp_format$prepollen_costs <- round(acc_costs_spp_format$prepollen_costs,digits=2)
+acc_costs_spp_format$pack_disp_costs <- round(acc_costs_spp_format$pack_disp_costs,digits=2)
+acc_costs_spp_format$failure_per_seed <- paste(round(acc_costs_spp_format$failure_per_seed,digits=2)," (",
+                                                 round(acc_costs_spp_format$prop_failure,digits=2),")")
+acc_costs_spp_format$prepollen_failure_per_seed <- round(acc_costs_spp_format$prepollen_failure_per_seed,digits=2)
+acc_costs_spp_format$postpollen_aborted_per_seed <- round(acc_costs_spp_format$postpollen_aborted_per_seed,digits=2)
+acc_costs_spp_format$seedset <- round(acc_costs_spp_format$seedset,digits=3)
+acc_costs_spp_format <- dplyr::select(acc_costs_spp_format,species,seed_size,embryo_endo_size,accessory_per_seed,seed_costs,prepollen_costs,pack_disp_costs
+                                      ,failure_per_seed,prepollen_failure_per_seed,postpollen_aborted_per_seed,seedset)
+acc_costs_spp_format
 
-write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table01_AccCosts_by_Species.csv",row.names=FALSE)
+write.csv(acc_costs_spp_format, file="figs2/Accessory_Costs/Table01_AccCosts_by_Species.csv",row.names=FALSE)
 ```
 
 #Figure 3. Ternary diagram showing seed_costs
@@ -180,20 +196,31 @@ ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
 dev.off()
 ```
 
-
-      labs(
-        y = "embryo+endosperm",
-        x = "pre-pollination",
-        z = "provisioning",
-        Tarrow = "embryo + endosperm weight (%)",
-        Larrow = "pre-pollination costs (%)",
-        Rarrow = "provisioning costs (%)")+
 #Table 2 showing seedcost breakdown into components, by species
 ```{r}
-prop_seed_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_costs,prop_prepollen_costs,prop_dispersal_costs,prop_seed_costs)
+prop_seed_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_costs,prop_prepollen_costs,prop_dispersal_costs,prop_embryo_endo_costs)
 prop_seed_costs_spp$species <- labels.spp.full()
-prop_seed_costs_spp <- format(prop_seed_costs_spp, digit=2)
-write.csv(prop_seed_costs_spp, file="figs2/Accessory_Costs/Table04_Prop_seed_costs_by_Species.csv",row.names=FALSE)
+
+mod_1 <- sma(seed_costs~prop_prepollen_costs,SummarySpp[["mean"]],log="y")
+mod_2 <- sma(seed_costs~prop_dispersal_costs,SummarySpp[["mean"]],log="y")
+mod_3 <- sma(seed_costs~prop_embryo_endo_costs,SummarySpp[["mean"]],log="y")
+
+row_x <- as.data.frame(0)
+row_1 <- as.data.frame("r2")
+row_1 <- as.data.frame(dplyr::bind_cols(row_1,row_x,as.data.frame(mod_1$groupsummary[1,3]),as.data.frame(mod_2$groupsummary[1,3]),as.data.frame(mod_3$groupsummary[1,3])))
+names(row_1) <- c("species","seed_costs","prop_prepollen_costs","prop_dispersal_costs","prop_embryo_endo_costs")
+
+row_2 <- as.data.frame("p-value")
+row_2 <- dplyr::bind_cols(row_2,row_x,as.data.frame(mod_1$groupsummary[1,4]),as.data.frame(mod_2$groupsummary[1,4]),as.data.frame(mod_3$groupsummary[1,4]))
+names(row_2) <- c("species","seed_costs","prop_prepollen_costs","prop_dispersal_costs","prop_embryo_endo_costs")
+
+row_3 <- as.data.frame("slope")
+row_3 <- dplyr::bind_cols(row_3,row_x,as.data.frame(mod_1$groupsummary[1,5]),as.data.frame(mod_2$groupsummary[1,5]),as.data.frame(mod_3$groupsummary[1,5]))
+names(row_3) <- c("species","seed_costs","prop_prepollen_costs","prop_dispersal_costs","prop_embryo_endo_costs")
+
+prop_seed_costs_spp <- dplyr::bind_rows(prop_seed_costs_spp,row_1,row_2,row_3)
+
+write.csv(prop_seed_costs_spp, file="figs2/Accessory_Costs/Table02_Prop_seed_costs_by_Species.csv",row.names=FALSE)
 ```
 
 #Figure 4. Scaling of accessory costs versus seed size, by species
@@ -295,6 +322,16 @@ abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
+plot(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(pack_disp_costs) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+slopes <- sma(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
+
 plot(failure_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(failure_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
 words.bottom.left.logxy(mod)
@@ -311,7 +348,7 @@ slopes <- sma(prepollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+#acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
 # plot(postpollen_aborted_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
 # mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
@@ -322,20 +359,11 @@ acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsum
 # abline(slopes$groupsummary["Int"][[1]],1,col="red")
 # acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
-mod <- lm(log10(pack_disp_costs) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]))
-words.top.left.logxy(mod)
-slopes <- sma(pack_disp_costs ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-abline(slopes$groupsummary["Int"][[1]],1,col="red")
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
-mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 
-slopes <- sma(postpollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+#slopes <- sma(postpollen_all_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+#acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
+acc_by_species$variable = c("total accessory costs","pre-pollination costs","provisioning costs", "failed_tissues")
 
 write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_cost_seed_size_slopes.csv",row.names=FALSE)
 ```
@@ -364,6 +392,16 @@ abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
+plot(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
+mod <- lm(log10(pack_disp_costs) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+slopes <- sma(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+abline(slopes$groupsummary["Int"][[1]],1,col="red")
+y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
+acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
+
 plot(failure_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="prepollen failure costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(failure_per_seed) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
 words.bottom.left.logxy(mod)
@@ -380,29 +418,36 @@ slopes <- sma(prepollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[[
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$prepollen_all_per_seed,SummarySpp[["se"]]$prepollen_all_per_seed)
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
+#acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-plot(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
-mod <- lm(log10(pack_disp_costs) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]]))
-words.top.left.logxy(mod)
-slopes <- sma(pack_disp_costs ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-abline(slopes$groupsummary["Int"][[1]],1,col="red")
-y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$pack_disp_costs,SummarySpp[["se"]]$pack_disp_costs)
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
-mtext(text="embryo + endosperm size (mg)",side=1,line=1.5,outer=TRUE)
+# plot(postpollen_aborted_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]],species!="COER"),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="aborted fruit accessory costs (mg/seed)",xlab="",cex=1.5,xaxt="n")
+# mod <- lm(log10(postpollen_aborted_per_seed) ~ log10(embryo_endo_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0&species!="COER"&species!="BAER"))
+# words.top.left.logxy(mod)
+# y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$postpollen_aborted_per_seed,SummarySpp[["se"]]$postpollen_aborted_per_seed)
+# slopes <- sma(postpollen_aborted_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]],species!="COER"&species!="BAER"),slope.test=1, log="xy",method="OLS")
+# abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
+# abline(slopes$groupsummary["Int"][[1]],1,col="red")
+# acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-slopes <- sma(postpollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
-acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-acc_by_species$variable = c("total accessory costs","prepollen_success","failed_tissues","total prepollen","dispersal","total postpollen")
+#slopes <- sma(postpollen_all_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1, log="xy",method="OLS")
+#acc_by_species <- dplyr::bind_rows(acc_by_species, dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
 
-write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_cost_embryo_endo_size_slopes.csv",row.names=FALSE)
+acc_by_species$variable = c("total accessory costs","pre-pollination costs","provisioning costs", "failed_tissues")
+
+acc_by_species$slope2 <- paste(format(acc_by_species$Slope,digits=3)," (",format(acc_by_species$Slope_lowCI,digits=3)," - ",format(acc_by_species$Slope_highCI,digits=3),")",sep="")
+
+acc_by_species$r2 <- format(acc_by_species$r2,digits=2)
+acc_by_species$pval <- format(acc_by_species$pval,digits=2)
+acc_by_species$Slope_test_p <- format(acc_by_species$Slope_test_p,digits=3)
+acc_slopes <- dplyr::select(acc_by_species,variable,r2,pval,slope2,Slope_test_p)
+
+write.csv(acc_slopes, file="figs2/Accessory_Costs/Table03_acc_cost_embryo_size_slopes.csv",row.names=FALSE)
 ```
 
 #Figure 5 seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure05_cost_of_flowers_vs_seed_size.wmf", height=5, width=15)
+win.metafile("figs2/Accessory_Costs/Figure05_cost_of_flowers_vs_embryo_endo_size.wmf", height=5, width=15)
 plot
 
 par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
@@ -606,7 +651,7 @@ abline(0,1)
 #mtext(text="total plant weight (mg)",side=1,line=2,outer=FALSE)
 
 yvar <- "repro_inv"
-xvar <- "embryo_endo_inv"
+xvar <- "propagule_inv"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
@@ -614,8 +659,9 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),log="xy",ylim=c(1,300000),xlim=c(1,300000), xlab="",ylab="",lty=results$linetype,pch=16)
 abline(0,1)
 mod <- lm(log10(propagule_inv)~log10(repro_inv),data=subset(SummaryInd,propagule_inv>0))
-mtext(text="investment in propagules (embryos & endosperm) (mg)",side=1,line=2,outer=FALSE)
+mtext(text="investment in propagules (mg)",side=1,line=2,outer=FALSE)
 mtext(text="total reproductive investment (mg)",side=2,line=2,outer=TRUE)
+legend("bottomright",legend=labels.spp.genus(),col=col.spp(),pch=16, cex=0.9,bty="n",text.font=3)
 
 xvar <- "repro_all_count"
 yvar <- "repro_inv"
@@ -633,7 +679,6 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy",slope.test=1)
 results <- lines(fit$groupsummary)
 plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(1,300000),xlim=c(1,300000),yaxt="n")
-legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 abline(0,1)
 mtext(text="flower weight * bud count (mg)",side=1,line=2,outer=FALSE)
 
