--- a/scripts/Accessory_figs_20160905.Rmd
+++ b/scripts/Accessory_figs_20160905.Rmd
@@ -359,7 +359,7 @@ axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
 mtext(text="count, scaled to plant size",side=2,line=1.1,outer=FALSE,cex=0.8)
 mtext(text="costs (mg/seed)",side=1,line=1.0,outer=FALSE,cex=0.8)
 legend("bottomleft",legend=c("seed count by reproductive costs","initiated ovules count by pollen-attraction costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
-extra.top.left("b",2,1)
+extra.top.left("b")
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
@@ -368,7 +368,7 @@ axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
 mtext(text="choosiness (ovule:seed)",side=2,line=1.3,outer=FALSE,cex=0.8)
 mtext(text="pollen attraction costs,",side=1,line=1.1,outer=FALSE,cex=0.8)
 mtext(text="scaled to plant size",side=1,line=1.9,outer=FALSE,cex=0.8)
-extra.top.left("c",2,1)
+extra.top.left("c")
 dev.off()
 
 win.metafile("ms/Accessory/Figure01def_predictions.wmf", height=6, width=6)
@@ -383,7 +383,7 @@ axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
 mtext(text="proportion all pollen-attraction investment",side=2,line=1.8,outer=FALSE,cex=0.8)
 mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
 legend("bottomleft",legend=c("become seeds","are aborted before provisioning"),title="into ovules that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
-extra.top.left("d",2,1)
+extra.top.left("d")
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=2)
@@ -393,7 +393,7 @@ axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
 mtext(text="proportion all provisioning investment",side=2,line=1.8,outer=FALSE,cex=0.8)
 mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
 legend("bottomleft",legend=c("become seeds","are aborted"),title="into zygotes that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
-extra.top.left("e",2,1)
+extra.top.left("e")
 
 plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
 segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
@@ -403,7 +403,7 @@ axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
 mtext(text="proportion total success costs",side=2,line=1.8,outer=FALSE,cex=0.8)
 mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
 legend("bottomleft",legend=c("pollen-attraction costs","provisioning costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
-extra.top.left("f",2,1)
+extra.top.left("f")
 
 dev.off()
 ```
@@ -432,7 +432,7 @@ mod_ovule <- sma(scaled_reach_flowering_count~pollen_attract_costs,data=SummaryS
 line_function_log_xy(SummarySpp[["mean"]]$repro_costs,mod_seed,1,col=venetian_red)
 line_function_log_xy(SummarySpp[["mean"]]$pollen_attract_costs,mod_ovule,1,col=cerulean)
 legend("bottomleft",legend=c("seed count by reproductive costs","mature ovules count by","pollen-attraction costs"),col=c(venetian_red,cerulean,"white"),pch=c(16,16,16),bty="n",cex=0.7)
-extra.top.left.logxy("a",2,1)
+extra.top.left.logxy("a")
 
 #panel b
 #plot(choosiness~prop_pollen_attract_vs_all_repro_all_repro,SummarySpp[["mean"]],log="xy",col=cerulean,pch=16,xlim=c(0.002,.5),ylim=c(3,800),xaxt="n",yaxt="n",cex=1,ylab="",xlab="")
@@ -444,14 +444,14 @@ mtext("choosiness (ovules:seed)",2,line=2.3,cex=0.7)
 mod_choosy <- sma(choosiness2~scaled_pollen_attract_costs,data=subset(SummarySpp[["mean"]]),log="xy",slope=-1,method="SMA")
 mod_choosy2 <- sma(choosiness2~scaled_pollen_attract_costs,data=subset(SummarySpp[["mean"]],species!="EPMI"),log="xy",slope=-1,method="SMA")
 line_function_log_xy(SummarySpp[["mean"]]$scaled_pollen_attract_costs,mod_choosy2,1,col=cerulean)
-extra.top.left.logxy("b",2,1)
+extra.top.left.logxy("b")
 
 #panel c - success proportions
 plot(prop_prepollen_success~embryo_endo_costs,SummarySpp[["mean"]],pch=16,log="x",col=cerulean,ylim=c(-.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
 points(prop_prepollen_discarded~embryo_endo_costs,SummarySpp[["mean"]],pch=16,col=venetian_red)
 #arrows(SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_prepollen_success-SummarySpp[["se"]]$prop_prepollen_success,SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_prepollen_success+SummarySpp[["se"]]$prop_prepollen_success,code=3,angle=90, length=0.1,col=cerulean)
 #arrows(SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_prepollen_discarded-SummarySpp[["se"]]$prop_prepollen_discarded,SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_prepollen_discarded+SummarySpp[["se"]]$prop_prepollen_discarded,code=3,angle=90, length=0.1,col=venetian_red)
-extra.top.left.logx("c",2,1)
+extra.top.left.logx("c")
 axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
 mtext("seed size (mg)",1,line=1.8,cex=0.7)
@@ -467,7 +467,7 @@ line_function_log_x(SummarySpp[["mean"]]$embryo_endo_costs,mod_prop_prepollen_di
 #panel d - pollen-attraction proportions
 plot(prop_postpollen_success~embryo_endo_costs,SummarySpp[["mean"]],pch=16,log="x",col=cerulean,ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
 points(prop_postpollen_discarded~embryo_endo_costs,SummarySpp[["mean"]],pch=16,col=venetian_red)
-extra.top.left.logx("d",2,1)
+extra.top.left.logx("d")
 axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
 mtext("seed size (mg)",1,line=1.8,cex=0.7)
@@ -485,7 +485,7 @@ plot(prop_pollen_attract_vs_success~embryo_endo_costs,SummarySpp[["mean"]],pch=1
      ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
 points(prop_provisioning_vs_success~embryo_endo_costs,SummarySpp[["mean"]],pch=16,col=venetian_red)
 #arrows(SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_pollen_attract_vs_success-SummarySpp[["se"]]$prop_pollen_attract_vs_success,SummarySpp[["mean"]]$embryo_endo_costs,SummarySpp[["mean"]]$prop_pollen_attract_vs_success+SummarySpp[["se"]]$prop_pollen_attract_vs_success,code=3,angle=90, length=0.1,col=cerulean)
-extra.top.left.logx("e",2,1)
+extra.top.left.logx("e")
 axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
 mtext("seed size (mg)",1,line=1.8,cex=0.7)
@@ -501,7 +501,7 @@ line_function_log_x(SummarySpp[["mean"]]$embryo_endo_costs,mod_prop_provisioning
 #panel f - change in slope of "success costs"
 plot(pollen_attract_costs~embryo_endo_costs,SummarySpp[["mean"]],pch=16,log="xy",col=cerulean,xlim=c(.01,100),ylim=c(.01,20000),xlab="",ylab="",xaxt="n",yaxt="n")
 points(provisioning_costs~embryo_endo_costs,SummarySpp[["mean"]],pch=16,col=venetian_red)
-extra.top.left.logxy("f",2,1)
+extra.top.left.logxy("f")
 axis(2, at=c(0.01,1,100,10000), labels=c(0.01,1,100,10000),cex.axis=0.8,las=2)
 axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
 mtext("seed size (mg)",1,line=1.8,cex=0.7)
