--- a/ms/Accessory/Wenk-Accessory-SI.Rnw
+++ b/ms/Accessory/Wenk-Accessory-SI.Rnw
@@ -51,46 +51,6 @@ flowering_parts$Method <- clean_headers(flowering_parts$Method)
 flowering_parts$Part <- firstup(flowering_parts$Part)
 flowering_parts$Description <- firstup(flowering_parts$Description)
 
-
-print_table_species <- function(species, data) {
-  data <- data[data$Species == species, -c(1)]
-  print(xtable(data,
-            hline.after=c(1),
-            align='p{0.1cm}p{4.5cm}p{6cm}p{2cm}p{1cm}p{1cm}',
-            label=sprintf("tab:parts_%s", gsub(" ", "_", species)),
-            caption=sprintf("Table of parts for \\emph{%s}.", species)),
-      sanitize.text.function=I,
-      , table.placement = "h"
-      , caption.placement = "top"
-      , include.rownames = FALSE
-      , include.colnames = TRUE
-      , size = "small"
-      , tabular.environment = 'longtable'
-      , floating = FALSE)
-}
-
-print_table_metadata <- function(path, align = NULL) {
-
-  data <-  read.csv(path, stringsAsFactors=FALSE, check.names=FALSE)
-  file <- gsub("_", "\\_", basename(path), fixed = TRUE)
-
-  label <- sprintf("tab:%s_meta", strsplit(basename(path), "_")[[1]][1])
-
-  print(xtable(data,
-            align=align,
-            hline.after=c(1),
-            label= label,
-            caption=
-              sprintf("Description of variables within the file \\texttt{data/%s}. These definitions can also be found within the file \\texttt{data/%s}.",
-              gsub("\\_meta", "", file, fixed = TRUE), file)),
-      , table.placement = "h"
-      , caption.placement = "top"
-      , include.rownames = FALSE
-      , include.colnames = TRUE
-      , size = "small"
-      , tabular.environment = 'longtable'
-      , floating = FALSE)
-}
 @
 
 \begin{document}
@@ -355,43 +315,56 @@ print(xtable(TableS19)
 
 \subsection{Methods for calculating investment in reproductive tissues}
 
-We collected data for 14 species (Table \ref{tab:species}) at 7 sites (Tables \ref{tab:sites}). Individuals were selected as described in the main text.
+We collected data for 14 species (Table \ref{tab:species}) at 7 sites (Tables \ref{tab:sites}, Fig. \ref{fig:map}). Individuals were selected as described in the main text.
 
 <<echo=FALSE,results='asis'>>=
-  data <-  read.csv("../../data/species.csv", stringsAsFactors=FALSE, check.names=FALSE)
-  data$Common_name <- firstup(data$Common_name)
-  names(data) <-  clean_headers(names(data))
 
-  print(xtable(data,
-            align= 'p{1cm}p{5cm}p{3cm}p{3cm}p{2cm}p{3cm}',
-            hline.after=c(1),
-            label= "tab:species",
-            caption="Details on study species."),
-      , table.placement = "h"
-      , caption.placement = "top"
-      , include.rownames = FALSE
-      , include.colnames = TRUE
-      , size = "small"
-      , tabular.environment = 'longtable'
-      , floating = FALSE)
+data <-  read.csv("../../data/species.csv", stringsAsFactors=FALSE, check.names=FALSE)
+data$Common_name <- firstup(data$Common_name)
+i <- data$Previous_names != ""
+data$Species_name[i] <- sprintf("%s (previously %s)", data$Species_name[i],data$Previous_names[i])
+data <- dplyr::select(data,-Previous_names)
 
-  data <-  read.csv("../../data/sites.csv", stringsAsFactors=FALSE, check.names=FALSE)
-  data <- data[order(data$age_at_harvest),]
-  names(data) <-  clean_headers(names(data))
+names(data) <-  clean_headers(names(data))
 
-  print(xtable(data,
-            align= 'p{0.1cm}p{2cm}p{1cm}p{1cm}p{1cm}p{1.4cm}p{1.4cm}p{7cm}',
-            hline.after=c(1),
-            label= "tab:sites",
-            caption="Details on study sites."),
-      , table.placement = "h"
-      , caption.placement = "top"
-      , include.rownames = FALSE
-      , include.colnames = TRUE
-      , size = "small"
-      , tabular.environment = 'longtable'
-      , floating = FALSE)
+print(xtable(data,
+          align= 'p{1cm}p{5cm}p{3cm}p{5cm}p{2cm}',
+          hline.after=c(1),
+          label= "tab:species",
+          caption="Details on study species."),
+    , table.placement = "h"
+    , caption.placement = "top"
+    , include.rownames = FALSE
+    , include.colnames = TRUE
+    , size = "small"
+    , tabular.environment = 'longtable'
+    , floating = FALSE)
+
+data <-  read.csv("../../data/sites.csv", stringsAsFactors=FALSE, check.names=FALSE)
+data <- data[order(data$age_at_harvest),]
+names(data) <-  clean_headers(names(data))
+
+print(xtable(data,
+          align= 'p{0.1cm}p{2cm}p{1cm}p{1cm}p{1cm}p{1.2cm}p{1.2cm}p{1.2cm}p{1.2cm}p{5cm}',
+          hline.after=c(1),
+          digits=c(0,0,0,2,0,0,0,4,4,0),
+          label= "tab:sites",
+          caption="Details on study sites."),
+    , table.placement = "h"
+    , caption.placement = "top"
+    , include.rownames = FALSE
+    , include.colnames = TRUE
+    , size = "small"
+    , tabular.environment = 'longtable'
+    , floating = FALSE)
 @
+
+\begin{figure}[h]
+\centering
+\includegraphics[height=10cm]{../map.pdf}
+\caption{Map of study locations.}
+\label{fig:map}
+\end{figure}
 
 For each species, we established a list of different reproductive tissue parts and mapped how these parts developed through time. In all species, reproductive tissue development initiates with a bud or inflorescence bud, which increases in size and is divided into multiple tissue types several times during development. For instance, a bud, once open, divides into being petals + stamens, a sepal, and a stigma. As a pollinated stigma develops into a fruit, it will be further divided into seed, seed pod, and potentially additional parts. The central development axis terminates with the formation of a mature seed, while side axes end in fully developed tissues (such as petals, calyx, pedicel) and aborted tissues (aborted seeds, aborted fruit) at the point where they cease to increase in mass.
 
